--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,13 @@
 name = "GeneralizedSylvesterSolver"
 uuid = "3b00829b-373b-4a35-afa6-09f888b04ecd"
 authors = ["MichelJuillard <michel.juillard@mjui.fr>"]
-version = "0.1.0"
+version = "0.1.2"
 
 [deps]
 FastLapackInterface = "29a986be-02c6-4525-aec4-84b980013641"
 KroneckerTools = "7e59e93b-e0cb-42c7-aa95-426cb754d61e"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 QuasiTriangular = "e29349eb-b3c8-4189-b6e7-6b7aca9b1830"
+
+[compat]
+julia = "1.6.3"
