--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,6 @@ QuasiTriangular = "e29349eb-b3c8-4189-b6e7-6b7aca9b1830"
 
 [compat]
 julia = "1.6.3"
+FastLapackInterface = "0.1.3"
+KroneckerTools = "0.1.1"
+QuasiTriangular = "0.1.0"
